aws-study-cloudformation.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: AWS-Study 

# 課題提出用のテンプレート

# VPC
# Public Subnet
# Private Subnet
# InternetGateway
# RouteTable
# SecurityGroupEC2
# SecurityGroupRDS
# SecurityGroupALB
# EC2
# RDS
# DBSubnetGroup
# ELB
# ELBTargetGroup
# ELBListener

Resources:
  # VPC
  TestVPC: 
    Type: AWS::EC2::VPC 
    Properties: 
      CidrBlock: 10.0.0.0/16
      Tags: 
        - Key: Name
          Value: TEST-VPC

  # Public Subnet
  TestPublicSubNet1a:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1a
      VpcId: !Ref TestVPC
      CidrBlock: 10.0.0.0/24
      Tags:
        - Key: Name
          Value: TEST-Public-SubNet1a

  TestPublicSubNet1c:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1c
      VpcId: !Ref TestVPC
      CidrBlock: 10.0.1.0/24
      Tags:
        - Key: Name
          Value: TEST-Public-SubNet1c

  # Private Subnet
  TestPrivateSubNet1a:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1a
      VpcId: !Ref TestVPC
      CidrBlock: 10.0.10.0/24
      Tags:
        - Key: Name
          Value: TEST-Private-SubNet1a

  TestPrivateSubNet1c:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1c
      VpcId: !Ref TestVPC
      CidrBlock: 10.0.11.0/24
      Tags:
        - Key: Name
          Value: TEST-Private-SubNet1c

  # InternetGateway
  TestIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: TEST-IGW

  # VPCGatewayAttachment
  AttachGateway: 
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref TestVPC
      InternetGatewayId: !Ref TestIGW 

  # RouteTable
  TestRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref TestVPC
      Tags:
        - Key: Name
          Value: TEST-RouteTable1

  TestRoute1: #外部に出るための...
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref TestRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref TestIGW

  # 各サブネットとルートテーブルを関連付け（パブリックサブネット化）
  TestSubNetRoutTablAsso1: 
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref TestRouteTable1
      SubnetId: !Ref TestPublicSubNet1a
  
  TestSubNetRoutTablAsso2: 
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref TestRouteTable1
      SubnetId: !Ref TestPublicSubNet1c
      
  # ここまでがVPC

  # SecurityGroup for EC2
  TestSecurityGroupEC2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: TEST-SecurityGroupEC2
      GroupDescription: TEST-SecurityGroupEC2
      VpcId: !Ref TestVPC
      SecurityGroupIngress:
        - IpProtocol: tcp #SSH
          CidrIp: 175.177.6.57/32 # 固定IPアドレス
          FromPort: 22
          ToPort: 22
        - IpProtocol: tcp #HTTP
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref TestSecurityGroupALB
      SecurityGroupEgress: #アウトバウンド
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: TEST-SG-EC2

  # SecurityGroup for RDS
  TestSecurityGroupRDS:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: AWS Study RDS
      VpcId: !Ref TestVPC
      SecurityGroupIngress: #インバウンド
        - IpProtocol: tcp
          FromPort: 3306 #mysqlのデフォルトが3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref TestSecurityGroupEC2 #ここがミソ特定のSGに所属しているものから接続する方が汎用性高い
      SecurityGroupEgress: #アウトバウンド
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: TEST-SG-RDS #13 だと aws-study-rds-sg

  # SecurityGroup for ALB
  TestSecurityGroupALB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: TEST-SecurityGroupALB
      GroupDescription: TEST-SecurityGroupALB
      VpcId: !Ref TestVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: TEST-SG-ALB

  # EC2
  TestEC2Instance: 
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Sub "resolve:ssm:/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64"
      InstanceType: t2.micro 
      InstanceInitiatedShutdownBehavior: stop 
      KeyName: aws-study-key #キーペア（作成済みのキーペアを指定）
      Tenancy: default    
      NetworkInterfaces:   
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: !Ref TestPublicSubNet1a  
          GroupSet:
            - !Ref TestSecurityGroupEC2        
      
      BlockDeviceMappings:          #ストレージの設定
        - DeviceName: /dev/xvda         #デバイス名
          Ebs:
            VolumeType: gp2         #ボリュームタイプ
            DeleteOnTermination: true       #インスタンス終了時に削除するのか
            VolumeSize: 10          #ディスクサイズ（GiB）
      UserData: !Base64 |           #構築後に実行するコマンド #下はhostname 変更コマンド
        sudo hostnamectl set-hostname TEST-LINUX-INSTANCE 
      Tags:                 
        - Key: Name
          Value: TEST-EC2


  EipTestServer: #Elastic IP アドレス作成
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref TestEC2Instance
  
  # RDS　
  TestRDS:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: 20 #容量GB
      AllowMajorVersionUpgrade: false #デフォ。mysqlのEngineVersion　8.0.の部分。大きく変わるので
      AutoMinorVersionUpgrade: true #41の部分。セキュリティーが上がるので積極的に
      DBInstanceClass: db.t4g.micro
      Port: 3306 #デフォ
      StorageType: gp2 #13だとgp3 
      BackupRetentionPeriod: 1 #18:29 保存日数
      MasterUsername: root #rootがダメなケースはadminとか　アプリで使うUNPWに合わせる
      MasterUserPassword: rootroot #すぐ捨てるので簡易なもの #簡単すぎると警告
      PreferredBackupWindow: 15:00-16:00
      PreferredMaintenanceWindow: sun:18:00-sun:19:00
      DBName: awsstudy
      Engine: mysql
      EngineVersion: 8.0.41 #13は8.0.39
      LicenseModel: general-public-license
      DBSubnetGroupName: !Ref DBSubnetGroup
      VPCSecurityGroups:
        - !Ref TestSecurityGroupRDS
      Tags:
        - Key: Name
          Value: TEST-RDS
  
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Created from the RDS Management Console #あまり気にしなくていい
      SubnetIds: # プライベートサブネットを参照するよう変更
        - !Ref TestPrivateSubNet1a
        - !Ref TestPrivateSubNet1c

  #ELB
  TestELB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: TEST-ELB
      SecurityGroups:
        - !Ref TestSecurityGroupALB
      Subnets:
        - !Ref TestPublicSubNet1a
        - !Ref TestPublicSubNet1c
      Tags:
        - Key: Name
          Value: TEST-ELB

  TestELBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: TEST-ELB-TG
      Port: 80
      Protocol: HTTP
      VpcId: !Ref TestVPC
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      HealthCheckTimeoutSeconds: 5
      HealthCheckProtocol: HTTP
      HealthCheckPath: "/"
      HealthCheckPort: "traffic-port"
      HealthCheckIntervalSeconds: 10
      Matcher:
        HttpCode: 200
      Tags:
        - Key: Name
          Value: TEST-ELB-TG
      Targets:
        - Id : !Ref TestEC2Instance
          Port: 8080

  TestELBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref TestELB
      DefaultActions:
        - TargetGroupArn: !Ref TestELBTargetGroup
          Type: forward
      Port: 80
      Protocol: HTTP
